integrated load data functions between orders and suppliers